k8s/overlays/aws-hml/ingress-aws-hml.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cassellas-api
  namespace: cassellas-api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - hml-api.cassellas.com.br
      secretName: cassellas-hml-tls
  rules:
    - host: hml-api.cassellas.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cassellas-api
                port:
                  number: 80
